Prevent hero image from loading on mobile

--- a/_includes/css/atoms.css
+++ b/_includes/css/atoms.css
@@ -9,9 +9,14 @@
 }
 
 #intro {
-  background-image: url(img/home-bg.jpg);
   background-position: fixed;
   background-size: cover;
+}
+
+@media (min-width: 1224px) {
+ #intro {
+  background-image: url(img/home-bg.jpg);
+ }
 }
 
 h1 {
